Trocando a foto que estava bugada

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     width: 950px;
     height: 550px;
     background-color: ghostwhite;
-    background-image: url(https://www.ibraco.org.co/wp-content/uploads/2021/10/ayrton.jpg);
+    background-image: url(https://www.fenaclubes.com.br/wp-content/uploads/2023/03/Ayrton-Senna.jpg);
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
